Gaim: The Pimpin' Penguin IM Clone that's good for the soul!

version 0.73cvs:
	* New Logging format and code:
		* fixes i18n issues with logs
		* compatable with old logs
		* hopefully fixes segfault in viewing logs
	* Fix several Jabber bugs
	* German translation updated (Bjoern Voigt)

version 0.72 (10/31/2003):
	* Added a search feature to conversations.
	* Added an option to remove the formatting toolbar, both globally and
	  on a per-window basis (Nathan Fredrickson)
	* Added a drop shadow to the buddy list tooltip
	* Smileys are copyable
	* Fixed the ICQ login crash
	* Fixed a crash in the Add Chat dialog when selecting an
	  account that doesn't support chats. Closes bug #821606.
	* Fixed a bug where new MSN accounts without buddies added wouldn't
	  connect.
	* Fixed a crash when deleting an account that has IMs or chats open.
	  Closes bug #821630.
	* Smileys have background colors
	* If SSL is not enabled, MSN will load, but error on connect.
	* Disable Jabber SASL auth until the standard stabilizes
	* Chinese (Simplified) translation updated (Funda Wang)
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Czech translation updated (Stanislav Brabec, Miloslav Trmac)
	* Danish translation updated (Morten Brix Pedersen (mbrix))
	* Dutch translation updated (Vincent van Adrighem)
	* Finnish translation updated (Arto Alakulju)
	* French translation updated (Eric Boumaour)
	* German translation updated (Bjoern Voigt)
	* Italian translation updated (Claudio Satriano)
	* Korean translation updated (Kyung-uk)
	* Portuguese (Portugal) updated (Duarte Henriques)
	* Romanian translation updated (Misu Moldovan)
	* Russian translation updated (Alexandre Prokoudine)
	* Serbian translation updated (Danilo Segan)
	* Serbian Latin translation updated (Danilo Segan)
	* Spanish translation updated (Javier Fernandez-Sanguino Pena)
	* Swedish translation updated (Tore Lundqvist (luntor))

version 0.71 (10/09/2003):